WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300039
Assertion related to speculation rules on latest MiniBrowser in debug mode
https://bugs.webkit.org/show_bug.cgi?id=300039
Summary
Assertion related to speculation rules on latest MiniBrowser in debug mode
Yoav Weiss
Reported
2025-10-02 12:12:52 PDT
When running MiniBrowser in debug mode and browsing to webkit.org, we get an ASSERT indicating "ASSERTION FAILED: Module script always have a loadableScript pointer." This is related to
https://github.com/WebKit/WebKit/pull/48322
where it seems we left out a preference check. (and a fix to the asserts)
Attachments
Add attachment
proposed patch, testcase, etc.
Yoav Weiss
Comment 1
2025-10-02 12:14:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51693
EWS
Comment 2
2025-10-02 13:39:59 PDT
Committed
300895@main
(79db5296a25b): <
https://commits.webkit.org/300895@main
> Reviewed commits have been landed. Closing PR #51693 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-10-02 13:40:28 PDT
<
rdar://problem/161842935
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug