SpeculationRules: Don't create script type for speculationrules when pref is off https://bugs.webkit.org/show_bug.cgi?id=300039

Reviewed by Alex Christensen.

https://github.com/WebKit/WebKit/pull/48322 landed the speculation rules feature, but missed a preference check.
This PR adds that preference check to avoid creating a speculationrules script type when the preference is disabled.
It also adjusts the failing ASSERT and handles speculation rules registration in that case.

* Source/WebCore/dom/ScriptElement.cpp:
(WebCore::ScriptElement::determineScriptType): Pass the speculation rules preference.
(WebCore::ScriptElement::determineScriptType const): Avoid returning the speculationrules type when preference is disabled.
(WebCore::ScriptElement::executePendingScript): Adjust ASSERT and register speculation rules in case the preference is enabled.
* Source/WebCore/dom/ScriptElement.h:

Canonical link: https://commits.webkit.org/300895@main